--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,19 +5,19 @@ on:
       - main
 
 jobs:
-  flutter_test:
+  ci:
     name: Run flutter test and analyze
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Clone repository
+        uses: actions/checkout@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          java-version: "17"
-          distribution: "temurin"
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-          flutter-version: "3.22.1"
+          channel: stable
+          flutter-version: 3.22.1
+      - run: flutter --version
       - run: flutter pub get
-      - run: flutter analyze
       - run: flutter test
+      - run: flutter build apk
+      - run: flutter build appbundle
