--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   ci:
     name: Run flutter test and analyze
-    runs-on: macos-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
@@ -24,13 +24,13 @@ jobs:
           flutter-version: 3.22.1
       - run: flutter --version
       - run: flutter pub get
-      - run: flutter test
+      - run: flutter analyze
+      - run: flutter test      
       - run: flutter build apk --release
-      - run: flutter build appbundle --release
       - name: Upload to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-            appId: ${{secrets.FIREBASE_APP_ID}}
-            token: ${{secrets.FIREBASE_TOKEN}}
-            groups: tester_1
-            file: build/app/outputs/apk/release/app-release.apk
+          appId: ${{secrets.FIREBASE_APP_ID}}
+          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
+          groups: tester_1
+          file: build/app/outputs/apk/release/app-release.apk
