--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: CI
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_call:
+  # pull_request:
+  #   branches:
+  #     - main
 
 jobs:
   ci:
