--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: CI
 
 on:
-  workflow_call:
-  # pull_request:
-  #   branches:
-  #     - main
+  # workflow_call:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   ci:
@@ -28,3 +28,5 @@ jobs:
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter test
+      - name: Get branch name
+        run: git rev-parse --abbrev-ref HEAD
