--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: CI
 
 on:
-  workflow_call:
-  # pull_request:
-  #   branches:
-  #     - main
+  # workflow_call:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   ci:
