--- a/.github/actions/setup_environment.yml
+++ b/.github/actions/setup_environment.yml
@@ -5,17 +5,15 @@ on:
 
 jobs:
   setup:
-    - name: Clone repository
-      uses: actions/checkout@v4
+    steps:
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "temurin"
 
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        java-version: "11"
-        distribution: "temurin"
-
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: stable
-        flutter-version: 3.22.1
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: 3.22.1
