--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,11 @@ jobs:
     name: CI
     runs-on: ubuntu-22.04
     steps:
-      - uses: ./.github/actions/setup_environment.yml
+      - name: Clone repository
+        uses: actions/checkout@v4
+        
+      - name: Setup vm environment
+        uses: ./.github/actions/setup_environment.yml
       # - name: Clone repository
       #   uses: actions/checkout@v4
       # - name: Get branch name
