--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   change_app_package_name: ^1.2.0
+  cider: ^0.2.7
 
 dev_dependencies:
   flutter_test:
