--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -69,3 +69,4 @@ jobs:
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: tester_1
           file: build/app/outputs/apk/release/app-release.apk
+          releaseNotesFile: release_notes.txt
