updated github workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Get branch name
         run: git rev-parse --abbrev-ref HEAD
 
+      - name: Log changes
+        run: git log --pretty="format:%s" HEAD...latest-build
+
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
