--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Get branch name
-        run: git rev-parse --abbrev-ref HEAD
+        run: git rev-parse --abbrev-ref HEAD | cat
 
       - name: Log changes
         run: |
