updated github workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,10 @@ jobs:
         run: |
           git fetch -f origin --tags
           git log --pretty="format:%s" HEAD...latest-build > ./release_notes.txt
+          git tag > ./tags.txt
 
       - run: cat ./release_notes.txt
+      - run: cat ./tags.txt
 
       - name: Set up JDK
         uses: actions/setup-java@v3
