--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,18 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
+      - name: Get branch name
+        run: git rev-parse --abbrev-ref HEAD
+
+      - name: Log changes
+        run: |
+          git fetch -f origin --tags
+          git log --pretty="format:%s" latest-build...${{ github.event.pull_request.head.sha }} > ./release_notes.txt
+
+      - run: cat -n ./release_notes.txt
+      - run: cat ./tags.txt
+      - run: git rev-list -n 1 latest-build
+
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
