--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.base_ref }}
 
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -53,7 +55,7 @@ jobs:
         run: git fetch -f origin --tags
 
       - name: Generate release notes
-        run: git log --pretty="format:%s" ${{ github.event.pull_request.head.sha }}...latest-build > ./release_notes.txt
+        run: git log --pretty="format:%s" latest-build...head > ./release_notes.txt
 
       - name: Tag latest build
         run: |
