--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.base_ref }}
+      - run: git rev-parse --abbrev-ref HEAD
 
       - name: Set up JDK
         uses: actions/setup-java@v3
