--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.base_ref }}
+          fetch-depth: 0
+          fetch-tags: true
+
       - run: git rev-parse --abbrev-ref HEAD
 
       - name: Set up JDK
