--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,14 +13,20 @@ jobs:
     name: CD
     runs-on: ubuntu-22.04
     steps:
-      - name: Clone repository
+      - name: Config git user
+        run: |
+          git config --global user.email "kittipong.t@bafs-id.co.th"
+          git config --global user.name "GitHub Actions"
+
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           ref: ${{ github.base_ref }}
           fetch-depth: 0
           fetch-tags: true
 
-      - run: git rev-parse --abbrev-ref HEAD
+      - name: Get branch name
+        run: git rev-parse --abbrev-ref HEAD
 
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -40,11 +46,6 @@ jobs:
           flutter analyze
           flutter test
 
-      - name: Config git user
-        run: |
-          git config --global user.email "kittipong.t@bafs-id.co.th"
-          git config --global user.name "GitHub Actions"
-
       - name: Bump version
         run: |
           flutter pub get
@@ -52,22 +53,10 @@ jobs:
           git add pubspec.yaml
           git commit -m "bumped version to $(flutter pub run cider version)"
 
-      - name: Push updated app version
-        run: git push
-
-      - name: Fetch tags
-        run: git fetch -f origin --tags
-
-      - run: git log --oneline > ./log.txt
-      - run: cat ./log.txt
-
       - name: Generate release notes
-        run: git log --pretty="format:%s" --merges latest-build...HEAD > ./release_notes.txt
-
-      - name: Tag latest build
         run: |
-          git tag -f latest-build
-          git push -f origin latest-build
+          git log --pretty="format:%s" --merges latest-build...HEAD > ./release_notes.txt
+          cat ./release_notes.txt
 
       - name: Build APK
         run: |
@@ -75,11 +64,19 @@ jobs:
           flutter pub get
           flutter build apk --release
 
-      - name: Upload to Firebase App Distribution
+      - name: Upload to Firebase app distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: ${{secrets.FIREBASE_APP_ID}}
+          appId: ${{ secrets.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: tester_1
           file: build/app/outputs/apk/release/app-release.apk
           releaseNotesFile: release_notes.txt
+
+      - name: Updated app version
+        run: git push
+
+      - name: Update latest build tag
+        run: |
+          git tag -f latest-build
+          git push -f origin latest-build
