--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -73,7 +73,7 @@ jobs:
           file: build/app/outputs/apk/release/app-release.apk
           releaseNotesFile: release_notes.txt
 
-      - name: Updated app version
+      - name: Update app version
         run: git push
 
       - name: Update latest build tag
