--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,6 +13,14 @@ jobs:
     name: CD
     runs-on: ubuntu-22.04
     steps:
+      - name: Set the env to dev if it matches
+        if: endsWith(github.ref, '/main')
+        run: |
+          echo "FLAVOR=dev" >> $GITHUB_ENV
+          echo "FILE_NAME=main_dev.dart" >> $GITHUB_ENV
+          echo "FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}" >> $GITHUB_ENV
+          echo "CREDENTIAL_FILE_CONTENT=${{ secrets.CREDENTIAL_FILE_CONTENT }}" >> $GITHUB_ENV
+
       - name: Config git user
         run: |
           git config --global user.email "kittipong.t@bafs-id.co.th"
@@ -24,9 +32,6 @@ jobs:
           ref: ${{ github.base_ref }}
           fetch-depth: 0
           fetch-tags: true
-
-      - name: Get branch name
-        run: git rev-parse --abbrev-ref HEAD
 
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -46,6 +51,13 @@ jobs:
           flutter analyze
           flutter test
 
+      - name: Log info
+        run: |
+          echo "FLAVOR = ${{ env.FLAVOR }}"
+          echo "FILE_NAME = ${{ env.FILE_NAME }}"
+          echo "FIREBASE_APP_ID = ${{ env.FIREBASE_APP_ID }}"
+          echo "Current branch = $(git rev-parse --abbrev-ref HEAD)"
+
       - name: Bump version
         run: |
           flutter pub get
@@ -62,13 +74,13 @@ jobs:
         run: |
           flutter clean
           flutter pub get
-          flutter build apk --release
+          flutter build apk --release --flavor ${{ env.FLAVOR }} -t ${{ env.FILE_NAME }}
 
       - name: Upload to Firebase app distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: ${{ secrets.FIREBASE_APP_ID }}
-          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
+          appId: ${{ env.FIREBASE_APP_ID }}
+          serviceCredentialsFileContent: ${{ env.CREDENTIAL_FILE_CONTENT }}
           groups: tester_1
           file: build/app/outputs/apk/release/app-release.apk
           releaseNotesFile: release_notes.txt
