--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
         if: endsWith(github.ref, '/main')
         run: |
           echo "FLAVOR=dev" >> $GITHUB_ENV
-          echo "FILE_NAME=main_dev.dart" >> $GITHUB_ENV
+          echo "FILE_NAME=main.dart" >> $GITHUB_ENV
           echo "FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}" >> $GITHUB_ENV
           echo "CREDENTIAL_FILE_CONTENT=${{ secrets.CREDENTIAL_FILE_CONTENT }}" >> $GITHUB_ENV
 
@@ -51,8 +51,8 @@ jobs:
           echo "FILE_NAME: ${{ env.FILE_NAME }}"
           echo "FIREBASE_APP_ID: ${{ env.FIREBASE_APP_ID }}"
           echo "Current branch: $(git rev-parse --abbrev-ref HEAD)"
-          echo "Java version: $(java --version)"
-          echo "Flutter version: $(flutter --version)"
+          java --version"
+          flutter --version"
 
       - name: Run Test
         run: |
@@ -76,7 +76,7 @@ jobs:
         run: |
           flutter clean
           flutter pub get
-          flutter build apk --release --flavor ${{ env.FLAVOR }} -t ${{ env.FILE_NAME }}
+          flutter build apk --release --flavor ${{ env.FLAVOR }} -t lib/${{ env.FILE_NAME }}
 
       - name: Upload to Firebase app distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
