--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,13 +13,20 @@ jobs:
     name: CD
     runs-on: ubuntu-22.04
     steps:
-      - name: Set the env to dev if it matches
-        if: endsWith(github.ref, '/main')
+      - name: Set up env
         run: |
-          echo "FLAVOR=dev" >> $GITHUB_ENV
-          echo "FILE_NAME=main.dart" >> $GITHUB_ENV
-          echo "FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}" >> $GITHUB_ENV
-          echo "CREDENTIAL_FILE_CONTENT=${{ secrets.CREDENTIAL_FILE_CONTENT }}" >> $GITHUB_ENV
+          if [ "${{ github.ref }}" == "refs/heads/dev" ]; then
+            echo "FLAVOR=dev" >> $GITHUB_ENV
+            echo "FILE_NAME=main.dart" >> $GITHUB_ENV
+          elif [ "${{ github.ref }}" == "refs/heads/uat" ]; then
+            echo "FLAVOR=uat" >> $GITHUB_ENV
+            echo "FILE_NAME=main.dart" >> $GITHUB_ENV
+          elif [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            echo "FLAVOR=dev" >> $GITHUB_ENV
+            echo "FILE_NAME=main.dart" >> $GITHUB_ENV
+            echo "FIREBASE_APP_ID=${{ vars.FIREBASE_APP_ID_DEV }}" >> $GITHUB_ENV
+            echo "CREDENTIAL_FILE_CONTENT=${{ secrets.CREDENTIAL_FILE_CONTENT }}" >> $GITHUB_ENV
+          fi
 
       - name: Config git user
         run: |
@@ -52,7 +59,7 @@ jobs:
           echo "FIREBASE_APP_ID: ${{ env.FIREBASE_APP_ID }}"
           echo "Current branch: $(git rev-parse --abbrev-ref HEAD)"
           echo $(java --version)"
-          echo $(flutter --version)"
+          flutter --version"
 
       - name: Run Test
         run: |
@@ -76,7 +83,7 @@ jobs:
         run: |
           flutter clean
           flutter pub get
-          flutter build apk --release --flavor ${{ env.FLAVOR }} -t lib/${{ env.FILE_NAME }}
+          flutter build apk --release --flavor ${{ env.FLAVOR }}
 
       - name: Upload to Firebase app distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
