--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,8 +58,8 @@ jobs:
           echo "FILE_NAME: ${{ env.FILE_NAME }}"
           echo "FIREBASE_APP_ID: ${{ env.FIREBASE_APP_ID }}"
           echo "Current branch: $(git rev-parse --abbrev-ref HEAD)"
-          echo $(java --version)"
-          flutter --version"
+          echo $(java --version)
+          flutter --version
 
       - name: Run Test
         run: |
