--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
             echo "FLAVOR=dev" >> $GITHUB_ENV
             echo "FILE_NAME=main.dart" >> $GITHUB_ENV
             echo "FIREBASE_APP_ID=${{ vars.FIREBASE_APP_ID_DEV }}" >> $GITHUB_ENV
-            echo "CREDENTIAL_FILE_CONTENT=${{ secrets.CREDENTIAL_FILE_CONTENT }}" >> $GITHUB_ENV
+            echo "CREDENTIAL_TARGET=CREDENTIAL_FILE_CONTENT_DEV" >> $GITHUB_ENV
           fi
 
       - name: Config git user
@@ -60,6 +60,7 @@ jobs:
           echo "Current branch: $(git rev-parse --abbrev-ref HEAD)"
           echo $(java --version)
           flutter --version
+          echo ${{ secrets[env.CREDENTIAL_TARGET] }}
 
       - name: Run Test
         run: |
@@ -89,7 +90,7 @@ jobs:
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{ env.FIREBASE_APP_ID }}
-          serviceCredentialsFileContent: ${{ env.CREDENTIAL_FILE_CONTENT }}
+          serviceCredentialsFileContent: ${{ secrets[env.CREDENTIAL_TARGET] }}
           groups: tester_1
           file: build/app/outputs/apk/release/app-release.apk
           releaseNotesFile: release_notes.txt
