--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -83,7 +83,7 @@ jobs:
         run: |
           flutter clean
           flutter pub get
-          flutter build apk --release --flavor ${{ env.FLAVOR }}
+          flutter build apk --release --flavor ${{ env.FLAVOR }} -t lib/${{ env.FILE_NAME }}
 
       - name: Upload to Firebase app distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
@@ -91,7 +91,7 @@ jobs:
           appId: ${{ env.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets[env.CREDENTIAL_TARGET] }}
           groups: tester_1
-          file: build/app/outputs/apk/release/app-release.apk
+          file: build/app/outputs/apk/${{ env.FLAVOR }}/release/app-${{ env.FLAVOR }}-release.apk
           releaseNotesFile: release_notes.txt
 
       - name: Update app version
