--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Generate release notes
         run: |
-          git log --pretty="format:%s" --merges latest-build...HEAD > ./release_notes.txt
+          git log --pretty="format:%b" --merges latest-build...HEAD > ./release_notes.txt
           cat ./release_notes.txt
 
       - name: Build APK
