--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,6 +15,7 @@ jobs:
     environment: ${{ github.ref_name }}
     steps:
       - run: ${{ toJSON(env) }}
+      - run: ${{ toJSON(vars) }}
       - name: Config git user
         run: |
           git config --global user.email "kittipong.t@bafs-id.co.th"
@@ -61,15 +62,15 @@ jobs:
         run: |
           flutter clean
           flutter pub get
-          flutter build apk --release --flavor ${{ env.FLAVOR }} -t lib/${{ env.FLAVOR }}
+          flutter build apk --release --flavor ${{ vars.FLAVOR }} -t lib/${{ vars.FLAVOR }}
 
       - name: Upload to Firebase app distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: ${{ env.FIREBASE_APP_ID }}
+          appId: ${{ vars.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT_DEV }}
           groups: tester_1
-          file: build/app/outputs/apk/${{ env.FLAVOR }}/release/app-${{ env.FLAVOR }}-release.apk
+          file: build/app/outputs/apk/${{ vars.FLAVOR }}/release/app-${{ vars.FLAVOR }}-release.apk
           releaseNotesFile: release_notes.txt
 
       - name: Update app version
