--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-22.04
     environment: ${{ github.ref_name }}
     steps:
-      - run: ${{ toJSON(vars) }}
+      - run: ${{ toJSON(github) }}
       - name: Config git user
         run: |
           git config --global user.email "kittipong.t@bafs-id.co.th"
