--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,9 @@
 name: CD
 
 on:
-  pull_request:
-    # types:
-    #   - closed
+  pull_request_target:
+    types:
+      - closed
     branches:
       - main
 
@@ -40,11 +40,11 @@ jobs:
           channel: stable
           flutter-version: 3.22.1
 
-      - name: Run Test
-        run: |
-          flutter pub get
-          flutter analyze
-          flutter test
+      # - name: Run Test
+      #   run: |
+      #     flutter pub get
+      #     flutter analyze
+      #     flutter test
 
       - name: Bump version
         run: |
@@ -53,30 +53,30 @@ jobs:
           git add pubspec.yaml
           git commit -m "bumped version to $(flutter pub run cider version)"
 
-      - name: Generate release notes
-        run: |
-          git log --pretty="format:%b" --merges latest-build...HEAD > ./release_notes.txt
-          cat ./release_notes.txt
+      # - name: Generate release notes
+      #   run: |
+      #     git log --pretty="format:%b" --merges latest-build...HEAD > ./release_notes.txt
+      #     cat ./release_notes.txt
 
-      - name: Build APK
-        run: |
-          flutter clean
-          flutter pub get
-          flutter build apk --release --flavor ${{ vars.FLAVOR }} -t lib/main.dart
+      # - name: Build APK
+      #   run: |
+      #     flutter clean
+      #     flutter pub get
+      #     flutter build apk --release --flavor ${{ vars.FLAVOR }} -t lib/main.dart
 
-      - name: Upload to Firebase app distribution
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-          appId: ${{ vars.FIREBASE_APP_ID }}
-          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT_DEV }}
-          groups: tester_1
-          file: build/app/outputs/apk/${{ vars.FLAVOR }}/release/app-${{ vars.FLAVOR }}-release.apk
-          releaseNotesFile: release_notes.txt
+      # - name: Upload to Firebase app distribution
+      #   uses: wzieba/Firebase-Distribution-Github-Action@v1
+      #   with:
+      #     appId: ${{ vars.FIREBASE_APP_ID }}
+      #     serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT_DEV }}
+      #     groups: tester_1
+      #     file: build/app/outputs/apk/${{ vars.FLAVOR }}/release/app-${{ vars.FLAVOR }}-release.apk
+      #     releaseNotesFile: release_notes.txt
 
       - name: Update app version
         run: git push
 
-      - name: Update latest build tag
-        run: |
-          git tag -f latest-build
-          git push -f origin latest-build
+      # - name: Update latest build tag
+      #   run: |
+      #     git tag -f latest-build
+      #     git push -f origin latest-build
