--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,6 +28,10 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
 
+      - uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.DEPLOYMENT_SSH_KEY }}
+
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
