--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,3 +17,11 @@ jobs:
 
       - name: Github ref
         run: echo ${{ github.ref }}
+
+      - uses: ./.github/workflows/reusable-workflow.yml
+        with:
+          num-octocats: "1234"
+
+      - uses: ./.github/workflows/reusable-workflow.yml
+        with:
+          num-octocats: "1234"
