--- a/.github/workflows/target.yml
+++ b/.github/workflows/target.yml
@@ -12,4 +12,7 @@ jobs:
     name: test
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - run: echo ${{ github.event.inputs.num-octocats }}
