--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Github ref
         run: echo ${{ github.ref }}
 
-      - uses: ./.github/workflows/target
+      - uses: ./.github/actions/target
         with:
           num-octocats: "1234"
 
-      - uses: ./.github/workflows/target
+      - uses: ./.github/actions/target
