updated github workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,7 @@ jobs:
 
       - name: Github ref
         run: echo ${{ github.ref }}
+  call-reusable-1:
+    uses: ./.github/workflows/reusable.yml
+    with:
+      your-name: "Alice"
