updated github workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
       - run: exist 1
   call-reusable-1:
     if: success()
+    needs: [test]
     uses: ./.github/workflows/reusable.yml
     with:
       your-name: "Alice"
