--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+env:
+  JAVA_VERSION: "11"
+  FLUTTER_VERSION: "3.22.1"
+
 jobs:
   test:
     name: test
@@ -21,6 +25,10 @@ jobs:
 
       - name: composite
         uses: ./.github/actions/target
+        with:
+          who-to-greet: "Alice"
+          java-version: ${{ env.JAVA_VERSION }}
+          flutter-version: ${{ env.FLUTTER_VERSION }}
 
       - run: exist 1
   call-reusable-1:
